MDEV-35792 Adding a regular index on a vector column leads to invalid table structure

don't create a prefix key for types that don't support prefix keys